# phortex

./: .env  .flake8  .gitignore  .pydocstyle  Pipfile  README.md  USEFUL_PARAMS.md  lint_all.sh  lint_comments.sh  package.xml  pylintrc  requirements.txt  setup.py  sync_files.sh
batch/: README.md  batch_python.sh  batch_script.sh  bulk_batch_predict.sh
fumes/: reward.py
fumes/environment/: __init__.py  current.py  extent.py  mtt.py  profile.py  targets.py  utils.py
fumes/examples/: proposal.odt
fumes/examples/epr_examples/: ctd_casts.py  ctd_towyo.py  epr_plumetransport_estimate.py  historial_current_exploration.py  historical_current_model.py  ybw_diffusivity.py  ybw_phumes_phortex.py  ybw_planning_brainstorming.py  ybw_planning_sentry664.py  ybw_plumemerging_estimate.py  ybw_simulation.py  ybw_towyo.py
fumes/examples/jdfr_examples/: onc_current_model.py  (+2 more)
fumes/guaymas_examples/: demo1-plan-and-write-sim.py  demo2-plot-from-saved-sim.py  demo3-mtt_class_examples.py  external_sensor_models.py  flux_and_nbp_investigation.py  frontmatter_crossflow.py  sentry_dive_two_brainstorm.py
fumes/model/: __init__.py  fully_obs.py  gpsampler.py  model.py  mtt.py  parameter.py  utils.py
fumes/planner/: __init__.py  trajectory_chain.py  trajectory_gen.py  trajectory_opt.py  utils.py
fumes/robot/: offline_robot.py
fumes/simulator/: __init__.py  simulator.py  utils.py
fumes/tests/: test_mtt.py  test_offline_robot_fixed_traj.py  test_trajectory.py
fumes/trajectory/: chain.py  lawnmower.py  lawnmower_with_start.py  utils.py
fumes/utils/: __init__.py  save_mission.py
(+41 files in other folders)
