<?xml version="1.0"?>
<package format="2">
  <name>fumes</name>
  <version>0.0.0</version>
  <description>The FUMES planner</description>
  <maintainer email="vpreston@mit.edu">vpreston</maintainer>
  <license>Copyright 2020 Massachusetts Institute of Technology</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
